# starry3d

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitattributes  .gitignore  .gitmodules  .luarc.json  CMakeLists.txt  CONVENTIONS.md  LICENSE  Makefile  README.md  build.zig  build.zig.zon  build_clibs.just  clean.sh  configure.lua  debugrun.sh  engineer  engineer.lua  justfile  libengineer.lua  odinfmt.json  sokol-shdc  xmake.lua
docs/: README.md  bmv_format.md  default_palette.md  dev_setup.md  format_starryvox.md
reactor/: ScratchAllocator.zig  root.zig
sandbox/: CMakeLists.txt  Makefile  README.md  engineer  engineer.lua  libengineer.lua  main.odin  main.zig  softrender.zig  starry3d.lua  tri.frag  tri.vert
sandbox/assets/: atlas.pxo  atlas_dev.pxo  default.stpal  fuck.stvox  palette.toml
sandbox/dev_assets/: atlas.pxo
sandbox/src/: FastNoiseLite.h  app.cpp  app.h  app.hpp  camera.h  debug_mode.cpp  debug_mode.h  debug_mode.hpp  hello_triangle.cpp  hello_triangle.hpp  main.c  main.cpp  world.cpp  world.h
src/: st3d.c  st3d.h  st3d_core.c  st3d_core.h  st3d_imgui.c  st3d_imgui.h  st3d_render.c  st3d_render.h  st3d_ui.c  st3d_ui.h  st3d_voxel.c  st3d_voxel.h  st3d_window.c  st3d_window.h  st_common.c  st_common.cpp  st_common.h  st_common.hpp  st_format.hpp  st_imgui.cpp  st_imgui.hpp  st_render.c  st_render.cpp  st_render.h  st_render.hpp  st_ui.c  st_ui.h  st_voxel.c  st_voxel.h  st_voxel_render.c  st_voxel_render.h  st_window.c  st_window.cpp  st_window.h  st_window.hpp  starry3d.h
starry/: ScratchAllocator.zig  app.cpp  app.h  app.zig  asset.h  (+36 more)
(+186 files in other folders)
